--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "sucrase ./src -d ./dist --transforms imports",
     "pretest": "sequelize db:migrate",
     "test": "jest",
-    "postest": "sequelize db:migrate:undo:all"
+    "postest": "sequelize db:migrate:undo:all",
+    "secure-mode": "jest --watch --verbose=true"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -17,6 +18,9 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "pg": "^7.18.1",
     "sequelize": "^5.21.4",
     "youch": "^2.0.10",
